--- a/uef_landing_page_styles.css
+++ b/uef_landing_page_styles.css
@@ -1,4 +1,76 @@
+/*--------------NAV----------------------*/
+
+nav {
+    margin: 0px;
+}
+
+.nav-bar {
+    width: 100%;
+    display: flex;
+    background-color: whitesmoke;
+    margin: 0px;
+}
+
+.nav-bar ul {
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+
+.nav-bar ul li {
+    flex: 1 25px;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 1.2rem;
+    color: #001116;
+}
+
+ul li .dropbtn {
+    all: unset;
+}
+
+ul li a {
+    text-decoration: none;
+    color: #001116;;
+    padding-right: 15px;
+    padding-left: 15px;
+    padding-top: 25px;
+    padding-bottom: 10px;
+}
+
+.dropdown {
+    position: relative;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+} 
+
+.dropdown:hover .dropdown-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.dropdown .dropdown-content a:hover {
+    background-color: #40565b;
+}
+
+.logo {
+    flex: 1;
+}
+
+.options {
+    flex: 1;
+}
+/*------------BODY----------------------*/
 body {
+    margin: 0px;
+    padding: 0px;
     font-family: 'Bebas Neue', cursive;
     background: repeating-radial-gradient(circle farthest-side at top left, #001116 20%, #001b23 30%);
     color: whitesmoke;
