--- a/uef_landing_page_styles.css
+++ b/uef_landing_page_styles.css
@@ -7,7 +7,7 @@ nav {
 .nav-bar {
     width: 100%;
     display: flex;
-    /* background-color: whitesmoke; */
+    background-color: whitesmoke;
     margin: 0px;
 }
 
@@ -443,7 +443,7 @@ footer {
         cursor: pointer;
     }
 
-    /* Changes the look of the hamburger menu bars*/
+    /* -------------Changes the look of the hamburger menu bars------------*/
     .hamburger.active .bar:nth-child(2) {
         opacity: 0;
     }
@@ -484,7 +484,7 @@ footer {
 
     .active.options {
         position: fixed;
-        height: 65vh;
+        height: 75vh;
         width: 55vw;
         right: 0;
         background-color: whitesmoke;
@@ -509,8 +509,8 @@ footer {
     }*/
 
     .nav-bar ul div {
-        /* border: red 3.0px solid; */
-        background-color: whitesmoke;
+        background-color: whi       
+        /* border: red 3.0px solid; */;
         margin-top: 10px;
         margin-bottom: 10px;
     }
@@ -521,6 +521,7 @@ footer {
         /* padding: 0; */
         font-size: 1.3rem;
         align-self: flex-start;
+        background-color: whitesmoke;
     }
 
     /*.dropdown-content a {
@@ -729,5 +730,105 @@ footer {
         padding-bottom: 35px;
     }
 
+
+}
+
+
+@media only screen and (max-width: 550px) {
+
+    /*-------------NAV------------------*/
+
+
+    .hamburger {
+        z-index: 10000;
+        display: block;
+        cursor: pointer;
+    }
+
+    /* -------------Changes the look of the hamburger menu bars------------*/
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    /* ------------------------------------------*/
+
+    .logo {
+        flex: 1 100px;
+        height: 7vh;
+    }
+
+    .options {
+        z-index: 100;
+        position: fixed;
+        height: 55vh;
+        width: 100vw;
+        /* left: -100%; */
+        right: 100%;
+        background-color: whitesmoke;
+        /* display: none; */
+        /* display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        flex: 1 100px; */
+    }
+
+    .options .active {
+        right: 0;
+    }
+
+    .active.options {
+        position: fixed;
+        height: 75vh;
+        width: 55vw;
+        right: 0;
+        background-color: whitesmoke;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        flex: 1 100px;
+    }
+
+    .options ul {
+        /* border: black 4.0px solid; */
+        position: fixed;
+        background-color: whitesmoke;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        font-size: 1.0rem;
+    }
+
+    .nav-bar ul div {
+        background-color: whi       
+        /* border: red 3.0px solid; */;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .nav-bar ul div li {
+        display: flex;
+        flex-direction: column;
+        /* padding: 0; */
+        font-size: 1.0rem;
+        align-self: flex-start;
+        background-color: whitesmoke;
+    }
+
+}
+
+@media only screen and (max-width: 300px) {
+
+    .nav-bar ul div li {
+        font-size: 0.82rem;
+    }
 
 }
